--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
   "plugins": ["@typescript-eslint"],
   "rules": {
     "prefer-const": "error",
+    "react/no-unescaped-entities": "off",
     "react/jsx-props-no-spreading": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
     "react/jsx-filename-extension": ["warn", { "extensions": [".tsx"] }]
